# piedra-papel-tijera-lpc17xx

./: .cproject  .project  CMakeLists.txt  DOCUMENTACION.md  INDEX.md  INSTRUCCIONES_MCUXPRESSO.md  NOTAS_TECNICAS.md  PLAN_PRUEBAS.md  README.md  RESUMEN_RAPIDO.md  linker_script.ld  linker_script_library.ld  linker_script_memory.ld
CMSISv2p00_LPC17xx/Drivers/inc/: lpc17xx_clkpwr.h
src/: piedra-papel-tijera-lpc17xx.c
